[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/img/variations/0/Rueda.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Ruleta.png" type="Texture" id=6]
[ext_resource path="res://assets/themes/spinwheel-theme.tres" type="Theme" id=7]
[ext_resource path="res://assets/img/variations/0/CheckRect.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Ruleta digital"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinWheel" type="Sprite" parent="."]
position = Vector2( 487.099, 471.334 )
z_index = 1
texture = ExtResource( 6 )

[node name="Wheel" type="Sprite" parent="SpinWheel"]
position = Vector2( -1.90137, -29.2191 )
z_as_relative = false
texture = ExtResource( 5 )

[node name="SpinButton" type="Button" parent="SpinWheel"]
margin_left = -50.1154
margin_top = -78.8974
margin_right = 50.8846
margin_bottom = 23.1026
focus_mode = 0
theme = ExtResource( 7 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckRect" type="Sprite" parent="."]
position = Vector2( 1208.53, 407.245 )
texture = ExtResource( 8 )

[node name="CheckBox" type="CheckBox" parent="CheckRect"]
margin_left = -201.41
margin_top = -63.7311
margin_right = -30.4102
margin_bottom = -32.7311
theme = ExtResource( 2 )
text = "Respuesta 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="CheckRect"]
margin_left = -201.41
margin_top = -14.375
margin_right = -25.4102
margin_bottom = 16.625
theme = ExtResource( 2 )
text = "Respuesta 2"

[node name="CheckBox3" type="CheckBox" parent="CheckRect"]
margin_left = -201.41
margin_top = 35.625
margin_right = -25.4102
margin_bottom = 66.625
theme = ExtResource( 2 )
text = "Respuesta 3"

[node name="CheckBox4" type="CheckBox" parent="CheckRect"]
margin_left = -201.41
margin_top = 85.625
margin_right = -23.4102
margin_bottom = 116.625
theme = ExtResource( 2 )
text = "Respuesta 4"

[node name="CheckBox5" type="CheckBox" parent="CheckRect"]
margin_left = -201.41
margin_top = 135.625
margin_right = -25.4102
margin_bottom = 166.625
theme = ExtResource( 2 )
text = "Respuesta 5"

[node name="CheckBox6" type="CheckBox" parent="CheckRect"]
margin_left = -201.41
margin_top = 185.625
margin_right = -24.4102
margin_bottom = 216.625
theme = ExtResource( 2 )
text = "Respuesta 6"

[node name="Question" type="Label" parent="."]
margin_left = 1006.06
margin_top = 155.87
margin_right = 1404.06
margin_bottom = 316.87
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.254902, 0.560784, 0.529412, 1 )
text = "Â¡Gira la rueda para ver la pregunta!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="SpinWheel/SpinButton" to="." method="_on_SpinButton_pressed"]
